--- a/index.html
+++ b/index.html
@@ -492,10 +492,9 @@
 			</div>
 		</div>
 	</footer>
-	<a class="text-white" href="https://www.instagram.com/roberto_marcillo38/" target="_blank">
-							  ❤⭐
-						</a>
-
+	<div
+	<p class="text-white" href="https://www.instagram.com/roberto_marcillo38/" target="_blank">  ❤⭐</p>
+</div>
 	<script src="js/md5.js"></script>
 	<script src="js/home.js"></script>
 </body>
