--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 				<li>License Agreement</li>
 				<li>Interest-Based Ads</li>
 				<li>Marvel Insider Terms</li>
-				<li>©2018 MARVEL</li>
+				<li>©2018 MARVEL ⭐Roberto Suarez⭐</li>
 			</div>
 		</div>
 	</footer>
